--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ client_secrets.json
 secrets.json
 __pycache__/
 *.pyc
+/client_secret_510931118692-qot967sn8c2bet644hui4n98mj9or4u9.apps.googleusercontent.com
+
